--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "gatsby-plugin-typescript": "^3.14.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-sharp": "^3.14.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sakura.css": "^1.3.1"
   }
 }
