--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sakura.css": "^1.3.1"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^17.0.10"
   }
 }
