--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "formik": "^2.2.9",
     "gatsby": "^3.14.3",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-manifest": "^3.14.0",
@@ -29,7 +30,8 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sakura.css": "^1.3.1"
+    "sakura.css": "^1.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.10"
